force-app/main/default/objects/Event__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>Event #</label>
    <type>AutoNumber</type>
</CustomField>