force-app/main/default/objects/Event__c/fields/Event_Detail__c.field-meta.xml
<CustomField>
    <fullName>Event_Detail__c</fullName>
    <label>Event Detail</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>