force-app/main/default/objects/Event__c/fields/People_Attending__c.field-meta.xml
<CustomField>
    <fullName>People_Attending__c</fullName>
    <label># People Attending</label>
    <summaryForeignKey>Event_Attende__c.Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>