force-app/main/default/objects/Event__c/validationRules/InPerson_Selected.validationRule-meta.xml
<ValidationRule>
    <fullName>InPerson_Selected</fullName>
    <active>true</active>
    <description>If Event Type field value is In-Person then user must need to select Location on Event Record.</description>
    <errorConditionFormula>AND( ISPICKVAL(Event_Type__c, &quot;In-Person&quot;), ISBLANK(Location__c))</errorConditionFormula>
    <errorMessage>If you picked &quot;In-Person&quot; in Event Type field, you must chose location.</errorMessage>
</ValidationRule>