force-app/main/default/objects/Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Event__c</columns>
    <columns>Status__c</columns>
    <columns>Start_DateTime__c</columns>
    <columns>End_DateTime__c</columns>
    <columns>Max_Seats__c</columns>
    <columns>Live__c</columns>
    <columns>Recurring__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>